# hsetroot

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h  configure  configure.ac  hsetroot.c  hsr-outputs.c  hsr-outputs.rb  options.c  outputs.c  outputs.h
config/: Makefile.am  Makefile.in  config.h.in
pkg/arch/: PKGBUILD  PKGBUILD.git
src/: Makefile.am  Makefile.in  hsetroot.c  options.c  options.h  outputs.c  outputs.h
